@@ -806,17 +806,13 @@ callback_drawingarea_expose_event (GtkWidget *widget, GdkEventExpose *event)
     
 	cairo_t *cr;
 	int i;
-	GdkWindow *window;
 	int retval = TRUE;
-
-	window = gtk_widget_get_parent_window(widget);
 
 	/* get a cairo_t */
 	cr = callbacks_gdk_cairo_create (widget->window);
 	
 	/* translate the draw area before drawing */
-	cairo_translate (cr,-screen.trans_x,-screen.trans_y);
-
+	cairo_translate (cr,-screen.trans_x-(screen.gerber_bbox.x1*(float) screen.transf->scale),-screen.trans_y+(screen.gerber_bbox.y2*(float) screen.transf->scale));
 	/* scale the drawing by the specified scale factor (inverting y since
 	 * cairo y axis points down)
 	 */ 
@@ -845,12 +841,6 @@ callback_drawingarea_expose_event (GtkWidget *widget, GdkEventExpose *event)
 				polarity = screen.file[i]->image->info->polarity;
 			}
 			
-			/* for now, scale the cairo context if the units are mms */
-			/* TODO: normalize all gerb_image data to mm during parsing */
-			if ((screen.file[i]->image->netlist->next)&&
-				(screen.file[i]->image->netlist->next->unit==MM)) {
-				cairo_scale (cr, 1.0/25.4, 1.0/25.4);
-			}
                   cairo_set_source (cr,(cairo_pattern_t *)screen.file[i]->privateRenderData);
 			if ((double) screen.file[i]->alpha < 65535) {				
 				cairo_paint_with_alpha(cr,(double) screen.file[i]->alpha/G_MAXUINT16);
