@@ -1,8 +1,17 @@
+2007-12-08  Julian Lamb
+	* src/render.c,src/callbacks.c: Fix translation code for cairo renderer
+	  so things are correctly centered on the screen after a zoom-to-fit. Fix
+	  scaling code for MM unit drawings.
+	* src/amacro.c,src/gerber.c: Fix error messages in amacro parsing (bug
+	  #1845782) on FreeBSD systems (thanks to Joerg for the patch). Also, fix
+	  possible hangs during amacro parsing (e.g. the file "%AM" would hang
+	  gerbv, since it didn't correctly check for EOF).
+
 2007-12-07  SDB
 	* render.c, render.h, Many other files:  Started to refactor
 	gerbv.  Also start to incorporate statistics gathering stuff
 	into gerber.[hc].
-	
+
 2007-12-07  Julian Lamb
 	* src/drill.c: Fix warning messages on some drill files (bug #1316247).
 	  The drill parser did not zero out new gerbv_aperture_t structures, which
